--- a/app/src/main/res/values/splash_resource.xml
+++ b/app/src/main/res/values/splash_resource.xml
@@ -3,6 +3,6 @@
     <style name="Theme.SplashScreenTheme" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/white</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/icon</item>
-        <item name="postSplashScreenTheme">@style/Theme.NavigationDemo</item>
+        <item name="postSplashScreenTheme">@style/Theme.GameTrail</item>
     </style>
 </resources>
