--- a/app/src/main/res/values/splash_resource.xml
+++ b/app/src/main/res/values/splash_resource.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="Theme.SplashScreenTheme" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/white</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/icon</item>
+        <item name="windowSplashScreenBackground">@color/black</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/rawg</item>
         <item name="postSplashScreenTheme">@style/Theme.GameTrail</item>
     </style>
 </resources>
